button linked with taxonomie result

--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -32,7 +32,8 @@
         </select>
     </form>
         <br>
-        <div class="button"><button class="button">toepassen</button>
+        <div class="button">
+            <button class="button" onclick="window.location.href='vraag indexeren resultaat.html';">toepassen</button>
     </div>
 </body>
 </html>
