--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -39,11 +39,12 @@
   border-collapse: collapse;
   width: 95%;
   margin: 4px 2px;
+  text-align: center;
 }
 
 .td, th {
   border: 1px solid #dddddd;
-  text-align: left;
+  text-align: center;
   padding: 8px 8px;
   margin: 6px;
 }
@@ -62,11 +63,11 @@
 
 /*pagina*/
 .pagination {
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     text-align: center;
     position: absolute;
-    top: 95%;
-    left: 10%;
+    /*top: 95%;*/
+    /*left: 10%;*/
 }
 
 .pagination a {
@@ -76,6 +77,7 @@
     margin: 5px;
     border: 0 solid #ddd;
     border-radius: 5px;
+    text-align: center;
 }
 
 .pagination a:hover {
@@ -91,15 +93,16 @@
 /*Menu Test-correct*/
 ul {
     list-style-type: none;
-    margin: 25px;
+    margin: 0;
     padding: 0;
     background-color: white;
     overflow: hidden;
+    text-align: center;
 }
 
 li {
     display: inline;
-    float: left;
+    text-align: center;
 }
 
 li a {
