added the taxonomie result to the flask server

--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -33,7 +33,7 @@
     </form>
         <br>
         <div class="button">
-            <button class="button" onclick="window.location.href='vraag indexeren resultaat.html';">toepassen</button>
+            <button class="button" onclick="window.location.href='/vraag_taxonomie_resultaat';">toepassen</button>
     </div>
 </body>
 </html>
