changed some small codes

--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nieuwe_redacteur</title>
-    <link rel="stylesheet" href="nieuwe_redacteur.css">
+    <link rel="stylesheet" href="../static/css/nieuwe_redacteur.css">
         </head>
 <body>
 <header class="top-bar">
     <div class="container-main">
         <div class="left-side">
             <a href="https://www.test-correct.nl/" class="site-logo">
-                <img src="testcorrect-logo.svg" alt="Logo">
+                <img src="../static/assets/logo/testcorrect-logo.svg" alt="Logo">
             </a>
         </div>
 
