--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inlogpagina</title>
-    <link rel="stylesheet" href="inloggen.css">
+    <link rel="stylesheet" href="../static/css/inloggen.css">
         </head>
 <body>
 <header class="top-bar">
