--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -28,7 +28,7 @@
   /*outline: 2px #186825;*/
   color: white;
   transition-duration: 0.2s;
-  margin: 3px 2px;
+  /*margin: 3px 2px;*/
 }
 
 /*tabel*/
