data toegevoegd vanuit de database naar de ai_prompts pagina

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -29,6 +29,15 @@
                     <th>Acties</th>
                 </tr>
             </thead>
+            <tbody>
+                {% for prompt in prompts %}
+                <tr>
+                    <td>{{ prompt['prompt_details'] }}</td>
+                    <td>{{ prompt['user_id'] }}</td>
+                    <td>{{ prompt['questions_count'] }}</td>
+                    <td>{{ prompt['questions_correct'] }}</td>
+
+            </tbody>
         </table>
         <div class="button">
             <button class="button">Nieuwe prompt toevoegen</button>
