verbinding database met ai_prompts pagina maken

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -32,7 +32,7 @@
             <tbody>
                 {% for prompt in prompts %}
                 <tr>
-                    <td>{{ prompt['prompt_details'] }}</td>
+                    <td>{{ prompt['prompt'] }}</td>
                     <td>{{ prompt['user_id'] }}</td>
                     <td>{{ prompt['questions_count'] }}</td>
                     <td>{{ prompt['questions_correct'] }}</td>
