verbinding maken gefixt

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -13,7 +13,7 @@
         </a>
         <nav>
             <a href="#" class="button">Vragen</a>
-            <a href="#" class="button">AI Prompts</a>
+            <a href="ai_prompts.html" class="button">AI Prompts</a>
             <a href="redacteur.html" class="button active">Redacteuren</a>
         </nav>
     </header>
