--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -44,7 +44,7 @@
             </tbody>
         </table>
         <div class="button">
-            <a href="/prompt_toevoegen/{{ prompt['id'] }}" class="button">Nieuwe prompt toevoegen</a>
+            <a href="/prompt_toevoegen"class="button">Nieuwe prompt toevoegen</a>
         </div>
 
 
