Toetsvragen van database, staan nu op de html website. Nu alleen nog de website stijl verbeteren, en de indexeer buttons laten werken.

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -7,19 +7,28 @@
 </head>
 <body>
     <ul class="ul">
-      <li><button style= "border: none; cursor: pointer; scale:95%;background:none;padding: 0 0;"><img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%; background:none;"  ></button></li>
-<!--      <li><a href="https://www.test-correct.nl/">TEST-CORRECT</a></li>-->
-      <li><a href="??">Oplossingen</a></li>
-      <li><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
-      <li><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
-      <li><a href="https://www.test-correct.nl/support">Over ons</a></li>
-      <li><a href="https://www.test-correct.nl/overons">Support</a></li>
-      <li><a href="??">Login</a></li>
-      <li><button class="button" style="font-family:Nunito extrabold,sans-serif; font-size: 17px; margin: 4px;">Boek online demo</button></li>
+      <li>
+          <button style= "border: none; cursor: pointer; scale:95%;background:none;padding: 0 0;"><img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%; background:none; text-align:center;"  >
+          </button>
+      </li>
+      <li style="padding:25px"><a href="??">Oplossingen</a></li>
+      <li style="padding:15px"><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
+      <li style="padding:15px"><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
+      <li style="padding:15px"><a href="https://www.test-correct.nl/support">Over ons</a></li>
+      <li style="padding:15px"><a href="https://www.test-correct.nl/overons">Support</a></li>
+      <li
+        style="color: #041F74; font-family:nunito, regular, serif; font-size:18px;padding:50px">
+        <img src="static/assets/icons/telefoon_icoon.png" alt="Telefoonnummer" style="width:19PX; height:17px;text-align: center;">
+        010 7171 171
+      </li>
+      <li style="padding:25px"><button class="second-button" style="font-family:Nunito extrabold,sans-serif; font-size: 17px;">Login</button>
+      </li>
+      <li style="padding:0"><button class="button" style="font-family:Nunito extrabold,sans-serif; font-size: 17px;">Boek online demo</button>
+      </li>
     </ul>
-    <button class="button"> Vragen </button>
-    <button class="button"> Ai Promts </button>
-    <button class="button"> Redacteuren </button>
+    <button class="button" style=" text-align: right; "> Vragen </button>
+    <button class="button" style=" text-align: right; "> Ai Promts </button>
+    <button class="button" style=" text-align: right; "> Redacteuren </button>
       <h1 style="font-family:Nunito extrabold,sans-serif; color:#041F74;"> Toetsvragen lijst </h1>
       <p style="font-family:Zilla slab,sans-serif; color:#041F74; margin: 4px 2px;" > Toetsvragen lijst </p>
         <button class = "button" > Ververs </button>
