--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -8,14 +8,15 @@
 <body>
     <ul class="ul">
       <li>
-          <button style= "border: none; cursor: pointer; scale:95%;background:none;padding: 0 0;"><img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%; background:none; text-align:center;"  >
+          <button style= "border: none; cursor: pointer; scale:95%; background:none;">
+              <img src="static/assets/logo/testcorrect-logo.svg" alt="Link to test-correct homepage" href="https://www.test-correct.nl/" style= "border: none; cursor: pointer; scale:95%; background:none; align-items: center;"  >
           </button>
       </li>
-      <li style="padding:25px"><a href="??">Oplossingen</a></li>
-      <li style="padding:15px"><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
-      <li style="padding:15px"><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
-      <li style="padding:15px"><a href="https://www.test-correct.nl/support">Over ons</a></li>
-      <li style="padding:15px"><a href="https://www.test-correct.nl/overons">Support</a></li>
+      <li style="padding:10px"><a href="??">Oplossingen</a></li>
+      <li style="padding:10px"><a href="https://www.test-correct.nl/toetsplatform">Platform</a></li>
+      <li style="padding:10px"><a href="https://www.test-correct.nl/pakketten">Aanbod</a></li>
+      <li style="padding:10px"><a href="https://www.test-correct.nl/support">Over ons</a></li>
+      <li style="padding:10px"><a href="https://www.test-correct.nl/overons">Support</a></li>
       <li
         style="color: #041F74; font-family:nunito, regular, serif; font-size:18px;padding:50px">
         <img src="static/assets/icons/telefoon_icoon.png" alt="Telefoonnummer" style="width:19PX; height:17px;text-align: center;">
@@ -44,10 +45,10 @@
             <tbody>
               {% for vraag in vragen %}
               <tr style="font-family: nunito, serif; color:#041F74; font-size: 15px; margin: 10px;">
-                <td>{{ vraag[0] }}</td>
-                <td>{{ vraag[1] }}</td>
-                <td>{{ vraag[2] if vraag[2] else "N/A"}}</td>
-                <td><button class="button"> Indexeer </button></td>
+                <td style="padding:5px">{{ vraag[0] }}</td>
+                <td style="padding:5px">{{ vraag[1] }}</td>
+                <td style="padding:5px">{{ vraag[2] if vraag[2] else "N/A"}}</td>
+                <td style="padding:5px"><button class="button"> Indexeer </button></td>
               </tr>
               {% else %}
               <tr>
@@ -60,27 +61,33 @@
           <p></p>
 
           <div class="pagination">
-            {% if first_page %}
-                <a href="">Eerste pagina</a>
+            {% if show_first %}
+                <a href="{{ url_for('toetsvragen', page=1) }}">Eerste pagina</a>
             {% endif %}
 
             {% if prev_page %}
                 <a href="{{ url_for('toetsvragen', page=prev_page) }}">Vorige</a>
             {% endif %}
 
-            {% for num in range(1, total_pages + 1) %}
-                <a href="{{ url_for('toetsvragen', page=num) }}"
-                  {% if num == page %} class="active" {% endif %}>
-                   {{ num }}
-                </a>
+            {% for num in page_numbers %}
+              {% if num == '...' %}
+                 <span>...</span>
+
+              {% else %}
+                   <a href="{{ url_for('toetsvragen', page=num) }}"
+                      class="{% if num == page %}active{% endif %}">
+                      {{ num }}
+                   </a>
+              {% endif %}
             {% endfor %}
+
 
             {% if next_page %}
                 <a href="{{ url_for('toetsvragen', page=next_page) }}">Volgende</a>
             {% endif %}
 
             {% if last_page %}
-                <a href="">Laatste pagina</a>
+                <a href="{{ url_for('toetsvragen', page=total_pages) }}">Laatste pagina</a>
             {% endif %}
           </div>
 </body>
