--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -67,14 +67,12 @@
 }
 
 /*tabel*/
-
 .table {
   font-family: nunito-regular, serif; font-size: 15px;
   border-collapse: collapse;
   width: 95%;
-  margin: 4px 2px;
-  /*padding: 5px 5px;  */
-  text-align: center;
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 .td, th {
@@ -88,17 +86,11 @@
   background-color: #ededed;
 }
 
-/*text*/
-.text {
-    color: #041F74;
-    font-family: nunito, regular, serif;
-    font-size: 20px
-}
-
-
 /*pagina*/
 .pagination {
     /*margin-top: 20px;*/
+    display: flex;
+    justify-content: center;
     text-align: center;
     position: absolute;
     /*top: 95%;*/
@@ -122,7 +114,6 @@
 .pagination a.active {
     background-color: #041F74;
     color: white;
-    text-align: center;
 }
 
 /*Menu Test-correct*/
