Deleted files, trying to push, but there are some errors.

--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -49,6 +49,7 @@
         <br>
         <div class="button">
                     <button class="button">Verwijder</button>
+        </div>
    </main>
 </body>
 </html>
