Ik ga nu even vanuit mijn branche alles linken.

--- a/Templates/toetsvragen.html
+++ b/Templates/toetsvragen.html
@@ -28,9 +28,9 @@
       <li style="padding:0"><button class="button" style="font-family:Nunito extrabold,sans-serif; font-size: 17px;">Boek online demo</button>
       </li>
     </ul>
-    <button class="button" style=" text-align: right; "> Vragen </button>
-    <button class="button" style=" text-align: right; "> Ai Promts </button>
-    <button class="button" style=" text-align: right; "> Redacteuren </button>
+    <button class="button" style=" text-align: right; "><a> href="{{ url_for('toetsvragen') }}"</a> Vragen </button>
+    <button class="button" style=" text-align: right; "><a> href="{{ url_for('Ai prompts') }}"</a> Ai Promts </button>
+    <button class="button" style=" text-align: right; "><a> href="{{ url_for('wijzig_redacteuren') }}"</a> Redacteuren </button>
       <h1 style="font-family:Nunito extrabold,sans-serif; color:#041F74;"> Toetsvragen lijst </h1>
       <p style="font-family:Zilla slab,sans-serif; color:#041F74; margin: 4px 2px;" > Toetsvragen lijst </p>
         <button class = "button" > Ververs </button>
