--- a/static/css/toetsvragen.css
+++ b/static/css/toetsvragen.css
@@ -166,4 +166,5 @@ form select {
     font-size: 14px;
     border: none;
     border-radius: 5px;
+    font-family:Zilla slab,sans-serif; color:#041F74;
 }
