route naar prompt details gemaakt

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -37,7 +37,7 @@
                     <td>{{ prompt['questions_count'] }}</td>
                     <td>{{ prompt['questions_correct'] }}</td>
                     <td>
-                        <a href="/prompt_details/{{ prompt['id'] }}" class="button">Details</a>
+                        <a href="/prompt_details/{{ prompt['prompts_id'] }}" class="button active">details</a>
                     </td>
                 </tr>
                 {% endfor %}
