user_id naar display_id veranderd

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -33,7 +33,7 @@
                 {% for prompt in prompts %}
                 <tr>
                     <td>{{ prompt['prompt'] }}</td>
-                    <td>{{ prompt['user_id'] }}</td>
+                    <td>{{ prompt['user_display_name'] }}</td>
                     <td>{{ prompt['questions_count'] }}</td>
                     <td>{{ prompt['questions_correct'] }}</td>
                     <td>
