user_id naar display_id veranderd in prompt details

--- a/Templates/prompt_details.html
+++ b/Templates/prompt_details.html
@@ -23,7 +23,7 @@
         <div class="details-container">
             <p><strong>Prompt:</strong> {{ prompt['prompt'] }}</p>
             <p><strong>Prompt details:</strong> {{ prompt['prompt_details'] }}</p>
-            <p><strong>Redacteur:</strong> {{ prompt['user_id'] }}</p>
+            <p><strong>Redacteur:</strong> {{ prompt['user_display_name'] }}</p>
             <p><strong>Datum aangemaakt:</strong> {{ prompt['date_created'] }}</p>
             <p><strong>Toetsvragen ingedeeld:</strong> {{ prompt['questions_count'] }}</p>
             <p><strong>Correct:</strong> {{ prompt['questions_correct'] }}</p>
