route van prompt_details naar redacteur gefixt

--- a/Templates/prompt_details.html
+++ b/Templates/prompt_details.html
@@ -13,8 +13,8 @@
         </a>
         <nav>
             <a href="#" class="button">Vragen</a>
-            <a href="ai_prompts.html" class="button">AI Prompts</a>
-            <a href="redacteur.html" class="button">Redacteuren</a>
+            <a href="/ai_prompts" class="button">AI Prompts</a>
+            <a href="/redacteur" class="button active">Redacteuren</a>
         </nav>
     </header>
 
