added jinja code to vraag indexeren

--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -17,13 +17,13 @@
             </nav>
     </header>
     <div class = "container">
-        <div>vraag: <span id="vraag"></span></div>
+        <div>vraag: <span id="vraag">{{ vraag }}</span></div>
         <br>
-        <div>vak: biologie</div>
+        <div>{{ vak }}</div>
         <br>
-        <div>onderwijsniveau: niveau 2</div>
+        <div>{{ onderwijsniveau }}</div>
         <br>
-        <div>leerjaar: 4</div>
+        <div>{{ leerjaar }}</div>
         <br>
         <form>
         <label for="keuze">prompt:</label>
