jinja code connected with flask

--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -19,11 +19,11 @@
     <div class = "container">
         <div>vraag: <span id="vraag">{{ vraag }}</span></div>
         <br>
-        <div>{{ vak }}</div>
+        <div>vak: {{ vak }}</div>
         <br>
-        <div>{{ onderwijsniveau }}</div>
+        <div>onderwijsniveau: {{ onderwijsniveau }}</div>
         <br>
-        <div>{{ leerjaar }}</div>
+        <div>leerjaar: {{ leerjaar }}</div>
         <br>
         <form>
         <label for="keuze">prompt:</label>
@@ -33,7 +33,7 @@
     </form>
         <br>
         <div class="button">
-            <button class="button" onclick="window.location.href='/vraag_taxonomie_resultaat';">toepassen</button>
+            <button class="button" onclick="window.location.href='/taxonomie_resultaat';">toepassen</button>
     </div>
 </body>
 </html>
