redacteur button will direct you to redacteur page

--- a/Templates/vraag indexeren naar taxonomie.html
+++ b/Templates/vraag indexeren naar taxonomie.html
@@ -13,7 +13,8 @@
             <nav>
                 <a href="#" class="button">Vragen</a>
                 <a href="#" class="button">AI Prompts</a>
-                <a href="#" class="button active">Redacteuren</a>
+                <a href="#" class="button" onclick="window.location.href='/redacteur';">Redacteuren</a>
+
             </nav>
     </header>
     <div class = "container">
