jinja toegevoegd aan inlogpagina html en flask

--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -33,7 +33,7 @@
 </header>
 <h1>Inloggen</h1>
 <div class="login_form">
-                <form action="login.php" method="POST">
+                <form action="/" method="POST">
             <div class="field">
                 <label for="username">Gebruikersnaam</label>
                 <input type="text" id="username" name="username" placeholder="Uw gebruikersnaam" value="{{ingevulde_gebruikersnaam|default('') }}" required="">
