--- a/Templates/inloggen.html
+++ b/Templates/inloggen.html
@@ -40,7 +40,7 @@
             </div>
             <div class="field">
                 <label for="password">Wachtwoord</label>
-                <input type="password" id="password" name="password" placeholder="Uw wachtwoord" required="">
+                <input type="password" id="password" name="password" placeholder="Uw wachtwoord" value="{{inegvulde_wachtwoord|default('') }}" required="">
             </div>
             <button class="button" type="submit">Inloggen</button>
         </form>
