--- a/Templates/nieuwe_redacteur.html
+++ b/Templates/nieuwe_redacteur.html
@@ -44,7 +44,7 @@
             </div>
             <div class="field">
                 <label for="password">Wachtwoord</label>
-                <input type="password" id="password" name="password" placeholder="Uw wachtwoord" required="">
+                <input type="password" id="password" name="password" placeholder="Uw wachtwoord" value="{{wachtwoord|default('')}}" required="">
             </div>
             <div class="toggle-container">
             <span>Admin</span>
