successvol ingelogd pagina

--- a/Templates/successvol_ingelogd.html
+++ b/Templates/successvol_ingelogd.html
@@ -32,10 +32,12 @@
     </div>
 </header>
 <div class="login_form">
-                <form action="/successvol_ingelogd" method="POST">
-            <button class="button" type="submit">Inloggen</button>
-        </form>
+            <div class="field">
+                <h1>{{ message }} </h1>
+                <p><a href="https://www.test-correct.nl/"</p>
             </div>
+            </div>
+
 
 <footer><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
 </body>
