successvol ingelogd pagina

--- a/Templates/successvol_ingelogd.html
+++ b/Templates/successvol_ingelogd.html
@@ -34,11 +34,9 @@
 <div class="login_form">
             <div class="field">
                 <h1>{{ message }} </h1>
-                <p><a href="https://www.test-correct.nl/"</p>
+                <p><a href="{{ link }}" class="button">Ga verder</a></p>
             </div>
             </div>
 
-
-<footer><a href="https://www.test-correct.nl/"><strong>Keer terug naar home pagina</strong></a></footer>
 </body>
 </html>
