--- a/Templates/successvol_ingelogd.html
+++ b/Templates/successvol_ingelogd.html
@@ -34,7 +34,7 @@
 <div class="login_form">
             <div class="field">
                 <h1>{{ message }} </h1>
-                <p><a href="{{ link }}" class="button">Ga verder</a></p>
+                <p><a href="{{ link }}" class="button three">Ga verder</a></p>
             </div>
             </div>
 
