--- a/static/css/inloggen.css
+++ b/static/css/inloggen.css
@@ -130,6 +130,19 @@ body {
             font-weight: bold;
         }
 
+        .login_form .newbutton {
+            background-color: #004df5;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            margin-left: 150px;
+            width: 95%;
+        }
+
 
         .login_form .button:hover {
             background-color: #3dbb56;
