--- a/Templates/base.html
+++ b/Templates/base.html
@@ -6,6 +6,7 @@
     <title>inlogpagina</title>
     <link rel="stylesheet" href="../static/css/inloggen.css">
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/ai_prompts.css">
         </head>
 <body>
 <header class="top-bar">
