Base header toegevoegd in ai_prompt.html

--- a/Templates/ai_prompts.html
+++ b/Templates/ai_prompts.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Prompts</title>
-    <link rel="stylesheet" href="../static/css/ai_prompts.css">
-</head>
+{%  extends "base.html" %}
+{% block main %}
+
 <body>
     <header class="header">
-        <a href="https://www.test-correct.nl/welcome">
-            <img src="../static/assets/logo/testcorrect-logo.svg" alt="Test-Correct Logo" class="logo">
-        </a>
         <nav>
             <a href="#" class="button">Vragen</a>
             <a href="/ai_prompts" class="button">AI Prompts</a>
@@ -51,4 +43,4 @@
     </main>
 
 </body>
-</html>
+{% endblock %}
