--- a/Templates/wijzig_redacteuren.html
+++ b/Templates/wijzig_redacteuren.html
@@ -23,7 +23,7 @@
                 <div id="box1">
                     <div>
                         <lable for="uname">naam: </lable>
-                        <input type="" placeholder="naam" required>
+                        <input type="" placeholder= {{ naam }} required>
                     </div>
                     <br>
                     <div>
